yml node verison

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,5 +1,3 @@
-# .github/workflows/docker.yml
-
 name: Build and Push Docker Image
 
 on:
@@ -12,20 +10,25 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout Repository
-      uses: actions/checkout@v2
+      - name: Checkout Repository
+        uses: actions/checkout@v2
 
-    - name: Login to Docker Hub
-      uses: docker/login-action@v1
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-    - name: Build and Push Docker Image
-      run: |
-        docker build -t suhwani/mynode:${{ github.sha }} .
-        docker push suhwani/mynode:${{ github.sha }}
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 20
 
-    - name: Deploy with Docker Compose
-      run: |
-        docker-compose up
+      - name: Build and Push Docker Image
+        run: |
+          docker build -t your-docker-username/your-repo-name:${{ github.sha }} .
+          docker push your-docker-username/your-repo-name:${{ github.sha }}
+
+      - name: Deploy with Docker Compose
+        run: |
+          docker-compose -f path/to/your/docker-compose.yml up -d
