--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -29,6 +29,6 @@ jobs:
           docker build -t suhwani/mynode:${{ github.sha }} .
           docker push suhwani/mynode:${{ github.sha }}
 
-      # - name: Deploy with Docker Compose
-      #   run: |
-      #     docker-compose -f path/to/your/docker-compose.yml up -d
+      - name: Deploy with Docker Compose
+        run: |
+          docker-compose up -d
