--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -49,4 +49,4 @@ jobs:
 
       - name: Deploy with Docker Compose
         run: |
-          docker-compose -f path/to/your/docker-compose.yml up -d
+          docker-compose up -d
