--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -47,6 +47,11 @@ jobs:
           sudo curl -L "https://github.com/docker/compose/releases/latest/download/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
           sudo chmod +x /usr/local/bin/docker-compose
 
+      - name: Set up Node.js for Deploy
+        uses: actions/setup-node@v3
+        with:
+          node-version: 20  # 이 부분을 업데이트합니다.
+
       - name: Deploy with Docker Compose
         run: |
           docker-compose up -d
