--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -25,7 +25,7 @@ jobs:
           node-version: 20
 
       - name: Create .env file
-        run: echo "DOCKER_IMAGE_TAG=${{ github.sha }}" > .env
+        run: echo "DOCKER_IMAGE_TAG=latest" > .env
 
       - name: Build and Push Docker Image
         run: |
