--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -13,11 +13,18 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v2
 
-      - name: Login to Docker Hub
-        uses: docker/login-action@v1
+      - name: Login to NCP Container Registry
+        uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          registry: ${{ secrets.NCP_CONTAINER_REGISTRY }}
+          username: ${{ secrets.NCP_ACCESS_KEY }}
+          password: ${{ secrets.NCP_SECRET_KEY }}
+
+      # - name: Login to Docker Hub
+      #   uses: docker/login-action@v1
+      #   with:
+      #     username: ${{ secrets.DOCKER_USERNAME }}
+      #     password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Set up Node.js
         uses: actions/setup-node@v3
@@ -26,12 +33,20 @@ jobs:
 
       - name: Create .env file
         run: echo "DOCKER_IMAGE_TAG=$(TZ=Asia/Seoul date '+%Y%m%d%H%M%S')" > .env
+      
+      - name: build and push
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: ${{ secrets.NCP_CONTAINER_REGISTRY }}/tag-name:latest
 
-      - name: Build and Push Docker Image
-        run: |
-          DOCKER_IMAGE_TAG=$(cat .env | grep DOCKER_IMAGE_TAG | cut -d'=' -f2)
-          docker build -t suhwani/mynode:${DOCKER_IMAGE_TAG} .
-          docker push suhwani/mynode:${DOCKER_IMAGE_TAG}
+      # - name: Build and Push Docker Image
+      #   run: |
+      #     DOCKER_IMAGE_TAG=$(cat .env | grep DOCKER_IMAGE_TAG | cut -d'=' -f2)
+      #     docker build -t suhwani/mynode:${DOCKER_IMAGE_TAG} .
+      #     docker push suhwani/mynode:${DOCKER_IMAGE_TAG}
 
   deploy:
     runs-on: ubuntu-latest
