--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
-        
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
@@ -36,14 +36,16 @@ jobs:
 
       - name: Create .env file
         run: echo "DOCKER_IMAGE_TAG=$(TZ=Asia/Seoul date '+%Y%m%d%H%M%S')" > .env
-      
-      - name: build and push
+            
+      - name: Build and Push Docker Image
         uses: docker/build-push-action@v3
         with:
           context: .
           file: ./Dockerfile
           push: true
-          tags: ${{ secrets.NCP_CONTAINER_REGISTRY }}/tag-name:latest
+          tags: |
+            ${{ secrets.NCP_CONTAINER_REGISTRY }}/tag-name:latest
+
 
       # - name: Build and Push Docker Image
       #   run: |
