--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -13,9 +13,6 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v2
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
       - name: Login to NCP Container Registry
         uses: docker/login-action@v2
         with:
@@ -36,22 +33,20 @@ jobs:
 
       - name: Create .env file
         run: echo "DOCKER_IMAGE_TAG=$(TZ=Asia/Seoul date '+%Y%m%d%H%M%S')" > .env
-            
+      
+      # - name: build and push
+      #   uses: docker/build-push-action@v3
+      #   with:
+      #     context: .
+      #     file: ./Dockerfile
+      #     push: true
+      #     tags: ${{ secrets.NCP_CONTAINER_REGISTRY }}/tag-name:latest
+
       - name: Build and Push Docker Image
-        uses: docker/build-push-action@v3
-        with:
-          context: .
-          file: ./Dockerfile
-          push: true
-          tags: |
-            ${{ secrets.NCP_CONTAINER_REGISTRY }}/tag-name:latest
-
-
-      # - name: Build and Push Docker Image
-      #   run: |
-      #     DOCKER_IMAGE_TAG=$(cat .env | grep DOCKER_IMAGE_TAG | cut -d'=' -f2)
-      #     docker build -t suhwani/mynode:${DOCKER_IMAGE_TAG} .
-      #     docker push suhwani/mynode:${DOCKER_IMAGE_TAG}
+        run: |
+          DOCKER_IMAGE_TAG=$(cat .env | grep DOCKER_IMAGE_TAG | cut -d'=' -f2)
+          docker build -t ${{ secrets.NCP_CONTAINER_REGISTRY }}/${{ secrets.NCP_CONTAINER_REPO }}:${DOCKER_IMAGE_TAG} .
+          docker push ${{ secrets.NCP_CONTAINER_REGISTRY }}/${{ secrets.NCP_CONTAINER_REPO }}:${DOCKER_IMAGE_TAG}
 
   deploy:
     runs-on: ubuntu-latest
