--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,6 @@ version: '3'
 
 services:
   app:
-    image: mokkitlink-container-registry.kr.ncr.ntruss.com/${DOCKER_IMAGE_TAG}
+    image: mokkitlink-container-registry.kr.ncr.ntruss.com/mynode:${DOCKER_IMAGE_TAG}
     ports:
       - "80:80"
