--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -32,7 +32,7 @@ jobs:
           node-version: 20
 
       - name: Create .env file
-        run: echo "DOCKER_IMAGE_TAG=$(TZ=Asia/Seoul date '+%Y%m%d%H%M%S')" > .env
+        run: echo "DOCKER_IMAGE_TAG=latest" > .env
       
       # - name: build and push
       #   uses: docker/build-push-action@v3
@@ -56,7 +56,7 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
-        
+
       - name: Login to NCP Container Registry
         uses: docker/login-action@v2
         with:
