--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -78,3 +78,26 @@ jobs:
       - name: Deploy with Docker Compose
         run: |
           docker-compose up -d
+
+
+  pull_from_registry:
+  name: Connect server ssh and pull from container registry
+    needs: push_to_registry
+    runs-on: ubuntu-latest
+    steps:
+      - name: connect ssh
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.DEV_HOST }}
+          username: ${{ secrets.DEV_USERNAME }}
+          password: ${{ secrets.DEV_PASSWORD }}
+          port: ${{ secrets.DEV_PORT }}
+          script : | 
+            cd test-express-repo
+            npm run start
+          # script: |
+          #   docker pull ${{ secrets.NCP_CONTAINER_REGISTRY }}/tag-name
+          #   docker stop $(docker ps -a -q)
+          #   docker rm $(docker ps -a -q)
+          #   docker run -d -p 3000:80 --env-file ${{ secrets.ENV_FILENAME_FRONTEND }} ${{ secrets.NCP_CONTAINER_REGISTRY }}/tag-name
+          #   docker image prune -f
