--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -83,7 +83,7 @@ jobs:
   pull_from_registry:
     runs-on: ubuntu-latest
 
-    needs: push_to_registry
+    needs: deploy
 
     steps:
       - name: connect ssh
