ssh connect & execute

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -94,8 +94,26 @@ jobs:
           password: ${{ secrets.DEV_PASSWORD }}
           port: ${{ secrets.DEV_PORT }}
           script : | 
-            cd test-express-repo
-            npm run start
+            export DOCKER_IMAGE_TAG=$(cat .env | grep DOCKER_IMAGE_TAG | cut -d'=' -f2)
+            echo "DOCKER_IMAGE_TAG=${DOCKER_IMAGE_TAG}" > .env
+            echo "Pulling latest image from registry..."
+            docker pull ${{ secrets.NCP_CONTAINER_REGISTRY }}/${{ secrets.NCP_CONTAINER_REPO }}:${DOCKER_IMAGE_TAG}
+
+      - name: Set up Docker Compose
+        run: |
+          sudo rm /usr/local/bin/docker-compose
+          sudo curl -L "https://github.com/docker/compose/releases/latest/download/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+          sudo chmod +x /usr/local/bin/docker-compose
+
+      - name: Set up Node.js for Deploy
+        uses: actions/setup-node@v3
+        with:
+          node-version: 20  # 이 부분을 업데이트합니다.
+      
+       - name: Deploy with Docker Compose
+        run: |
+          docker-compose up -d
+          
 # script: |
 #   docker pull ${{ secrets.NCP_CONTAINER_REGISTRY }}/tag-name
 #   docker stop $(docker ps -a -q)
