하아 ㅎ힘들다

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -100,15 +100,15 @@ jobs:
             fi
 
             # DOCKER_IMAGE_TAG 값을 .env 파일에서 읽어오기
-            export DOCKER_IMAGE_TAG=$(cat .env | grep DOCKER_IMAGE_TAG | cut -d'=' -f2)
+            DOCKER_IMAGE_TAG=$(grep DOCKER_IMAGE_TAG .env | cut -d'=' -f2)
 
             # .env 파일에 DOCKER_IMAGE_TAG 설정
-            echo "DOCKER_IMAGE_TAG=${DOCKER_IMAGE_TAG}" > .env
+            echo "DOCKER_IMAGE_TAG=${DOCKER_IMAGE_TAG:-latest}" > .env
 
             # Docker 이미지 레지스트리에서 가져오기
             echo "Pulling latest image from registry..."
             docker pull ${{ secrets.NCP_CONTAINER_REGISTRY }}/${{ secrets.NCP_CONTAINER_REPO }}:${DOCKER_IMAGE_TAG}
-            
+
       - name: Set up Docker Compose
         run: |
           sudo rm /usr/local/bin/docker-compose
