--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -94,7 +94,18 @@ jobs:
           password: ${{ secrets.DEV_PASSWORD }}
           port: ${{ secrets.DEV_PORT }}
           script : | 
-            cd test-express-repo
+            cd test-docker
+            # .env 파일이 없으면 생성하고 초기값 설정
+            if [ ! -f .env ]; then
+              echo "DOCKER_IMAGE_TAG=latest" > .env
+            fi
+
+            # DOCKER_IMAGE_TAG 값을 .env 파일에서 읽어오기
+            export DOCKER_IMAGE_TAG=$(cat .env | grep DOCKER_IMAGE_TAG | cut -d'=' -f2)
+
+            # .env 파일에 DOCKER_IMAGE_TAG 설정
+            echo "DOCKER_IMAGE_TAG=${DOCKER_IMAGE_TAG}" > .env
+            docker pull ${{ secrets.NCP_CONTAINER_REGISTRY }}/${{ secrets.NCP_CONTAINER_REPO }}:${DOCKER_IMAGE_TAG}
 
       - name: Set up Docker Compose
         run: |
