--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -86,6 +86,16 @@ jobs:
     needs: deploy
 
     steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+
+      - name: Login to NCP Container Registry
+        uses: docker/login-action@v2
+        with:
+          registry: ${{ secrets.NCP_CONTAINER_REGISTRY }}
+          username: ${{ secrets.NCP_ACCESS_KEY }}
+          password: ${{ secrets.NCP_SECRET_KEY }}
+
       - name: connect ssh
         uses: appleboy/ssh-action@master
         with:
@@ -105,7 +115,20 @@ jobs:
 
             # .env 파일에 DOCKER_IMAGE_TAG 설정
             echo "DOCKER_IMAGE_TAG=${DOCKER_IMAGE_TAG}" > .env
-            docker pull ${{ secrets.NCP_CONTAINER_REGISTRY }}/${{ secrets.NCP_CONTAINER_REPO }}:${DOCKER_IMAGE_TAG}
+      
+      - name: Login to NCP Container Registry
+        uses: docker/login-action@v2
+        with:
+          registry: ${{ secrets.NCP_CONTAINER_REGISTRY }}
+          username: ${{ secrets.NCP_ACCESS_KEY }}
+          password: ${{ secrets.NCP_SECRET_KEY }}
+            
+      - name: Pull Docker Image
+        run: |
+          export DOCKER_IMAGE_TAG=$(cat .env | grep DOCKER_IMAGE_TAG | cut -d'=' -f2)
+          echo "DOCKER_IMAGE_TAG=${DOCKER_IMAGE_TAG}" > .env
+          echo "Pulling latest image from registry..."
+          docker pull ${{ secrets.NCP_CONTAINER_REGISTRY }}/${{ secrets.NCP_CONTAINER_REPO }}:${DOCKER_IMAGE_TAG}
 
       - name: Set up Docker Compose
         run: |
